--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "homepage": "https://github.com/krzKaczor/SwiftScript",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-concurrent": "^1.0.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-nodemon": "^0.3.0",
     "grunt-traceur": "^0.2.10"
   }
 }
